syntax = "proto3";

package urlshortener;
option go_package = "github.com/timdin/url-shortener/proto/urlshortener";

service URLShortener {
    rpc Shortern(ShorternRequest) returns (ShorternResponse);
}

message ShorternRequest {
    string URL = 1;
    string Expiration = 2;
}

message ShorternResponse {
    string ID = 1;
    string ShortURL = 2;
    string error = 3;
}

